added storage controller

--- a/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
@@ -14,7 +14,7 @@
                 +ActionLink('a', 'b') Departments
         .item
             if self.isStorageMonitorVisible()
-                +ActionLink('a', 'b') Storage monitor
+                +ActionLink('storage', 'list') Storage monitor
         .item
             if self.isBackgroundTaskMonitorVisible()
                 +ActionLink('backgroundtask', 'list') Background task monitor
