--- a/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
@@ -11,7 +11,7 @@
     .row
         .item
             if self.isDepartmentsVisible()
-                +ActionLink('a', 'b') Departments
+                +ActionLink('departments', 'list') Departments
         .item
             if self.isStorageMonitorVisible()
                 +ActionLink('storage', 'list') Storage monitor
