moved addschool dialog files

--- a/Chalkable.Web/assets/jade/activities/departments/Departments.jade
+++ b/Chalkable.Web/assets/jade/activities/departments/Departments.jade
@@ -1,4 +1,7 @@
 .departments
+    .action-bar.not-transparent
+        .container.panel-bg
+            +ActionLink('departments', 'addDepartment').chlk-add.opacity-button Add Department
     .grid.not-transparent
         .container
             .head.panel-bg
