added app categories controller

--- a/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/Dashboard.jade
@@ -7,7 +7,7 @@
                 +ActionLink('a', 'b') Preferences
         .item
             if self.isAppCategoriesVisible()
-                +ActionLink('a', 'b') Application categories
+                +ActionLink('appcategories', 'list') Application categories
     .row
         .item
             if self.isDepartmentsVisible()
