added appcategory dialog

--- a/Chalkable.Web/assets/jade/activities/apps/AppCategories.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppCategories.jade
@@ -1,7 +1,7 @@
 .app-categories
     .action-bar.not-transparent
         .container.panel-bg
-            +ActionLink('appcategories', 'addCategory').chlk-add.opacity-button Add Category
+            +ActionLink('appcategories', 'addCategory').chlk-add.opacity-button Add application category
     .grid.not-transparent
         .container
             .head.panel-bg
