--- a/Chalkable.Web/assets/jade/activities/school/ActionButtons.jade
+++ b/Chalkable.Web/assets/jade/activities/school/ActionButtons.jade
@@ -3,10 +3,12 @@
         each button,i in getActionButtons()
             -index = i+1
             -clazz = (self.getButtons()[0] == index) ? "blue " : ((self.getButtons().indexOf(index) == -1) ? "grey disabled " : "green ")
-            +Button()(class="special-button2 " + clazz)= button
-    .emails
-        +Select('adminEmail')#admin-emails
+            +Button()(class="special-button2 action-link-button " + clazz, data-index=index)= button
+    +ActionForm('schools', 'actionLink').emails#emails-form
+        +Select('email')#admin-emails
             each email in self.getEmails()
                 +Option(email, email)
+        input(type="hidden",name="index")
+        input.submit.x-hidden
 
 
