--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -37,7 +37,7 @@
                 "#require": {
                     "plugins": ["~/assets/jade.js"],
                     "appCodeDir": "~/app/",
-                    "siteRoot": "http://localhost:11603",
+                    "serviceRoot": "@Url.Content("~")",
                     "appRoot": "@Url.Content("~")",
                     "libs": {
                     }
