--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -251,6 +251,43 @@ HTML {
         }
     }
 
+    &.add-district{
+      min-height: 290px;
+      .x-window-body{
+
+
+        .submit-btn{
+          margin-left: 180px;
+          margin-top: 25px;
+          margin-right: 5px;
+        }
+        .cancel-btn{
+
+        }
+
+        .x-form-field{
+          margin-bottom: 4px;
+          label{
+            width: 125px;
+            display: inline-block;
+            text-align: right;
+            height: 18px;
+            color: #808080;
+            font: normal 14px tahoma, arial, helvetica, sans-serif;
+            padding: 3px;
+            padding-left: 0;
+          }
+
+
+          input{
+            width: 222px;
+            border-radius: 5px;
+          }
+        }
+
+      }
+    }
+
     &.add-department{
       min-height: 200px;
       .x-window-body{
