fixed school service

--- a/Chalkable.Web/assets/jade/activities/school/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/school/Schools.jade
@@ -19,6 +19,7 @@
                         .td= item.getSchoolUrl()
                         .td.action-links
                             +ActionLink('schools', 'import', item.getId()).view
+                            +ActionLink('schools', 'details', item.getId()).profile
                             +ActionLink('schools', 'delete', item.getId()).remove
         +Paginator('schools', 'list', self)
 
