--- a/Chalkable.Web/assets/jade/activities/district/add-district-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/district/add-district-dialog.jade
@@ -4,21 +4,25 @@
     .x-window-body
         .general-info
             +ActionForm('district', 'addDistrict')
+                -console.log(self)
                 input(type="hidden",name="name", value=self.id)
                 .x-form-field
                     label Name:
                     input(type="text",name="name", value=self.name)
                 .x-form-field
                     label DB Name:
-                    input(type="text",name="dbName", value=self.dbName)
+                    input(type="text",name="dbname", value=self.dbName)
                 .x-form-field
                     label SIS URL:
-                    input(type="text",name="sisUrl", value=self.sisUrl)
+                    input(type="text",name="sisurl", value=self.sisUrl)
                 .x-form-field
                     label SIS Username:
-                    input(type="text",name="sisUserName", value=self.sisUserName)
+                    input(type="text",name="sisusername", value=self.sisUserName)
+                .x-form-field
+                    label SIS Password:
+                    input(type="text",name="sispassword", value=self.sisPassword)
                 .x-form-field
                     label SIS System Type:
-                    input(type="text",name="sisSystemType", value=self.sisSystemType)
+                    input(type="text",name="sissystemtype", value=self.sisSystemType)
                 +Button(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button Cancel
