--- a/Chalkable.Web/assets/jade/activities/school/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/school/Schools.jade
@@ -1,5 +1,5 @@
 .schools
     .grid.not-transparent
         +RenderWith(self._model, chlk.templates.school.SchoolsGrid)
-                            +ActionLink('schools', 'import', item.getId()).view
+            //+ActionLink('schools', 'import', item.getId()).view
 
