added update method for districts

--- a/Chalkable.Web/assets/jade/activities/district/Districts.jade
+++ b/Chalkable.Web/assets/jade/activities/district/Districts.jade
@@ -1,7 +1,7 @@
 .districts
     .action-bar.not-transparent
         .container.panel-bg
-            +ActionLink('district', 'addDistrict').chlk-add.opacity-button Add District
+            +ActionLink('district', 'add').chlk-add.opacity-button Add District
     .grid.not-transparent
         .container
             .head.panel-bg
