added grid control

--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -1,19 +1,17 @@
-.schools
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Application Name
-                .th Description
-                .th isInternal
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getName()
-                        .td= item.getShortDescription()
-                        .td
-                        .td.action-links
-                            +ActionLink('apps', 'details', item.getId()).profile
-                            +ActionLink('apps', 'delete', item.getId()).remove
-        +Paginator('apps', 'list', self)
+.apps-list
+    +Grid('apps', 'list', self).not-transparent
+        +GridHead()
+            .th Application Name
+            .th Description
+            .th isInternal
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getName()
+                    .td= item.getShortDescription()
+                    .td
+                    .td.action-links
+                        +ActionLink('apps', 'details', item.getId()).profile
+                        +ActionLink('apps', 'delete', item.getId()).remove
 
