--- a/Chalkable.Web/assets/jade/activities/storage/Storages.jade
+++ b/Chalkable.Web/assets/jade/activities/storage/Storages.jade
@@ -1,16 +1,13 @@
-.schools
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Name
-                .th Uri
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getName()
-                        .td= item.getUri()
-                        .td.action-links
-                            +ActionLink('storage', 'blobs', item.getName()).profile
-        +Paginator('storage', 'list', self)
-
+.storages
+    +Grid('storage', 'list', self).not-transparent
+        +GridHead()
+            .th Name
+            .th Uri
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getName()
+                    .td= item.getUri()
+                    .td.action-links
+                        +ActionLink('storage', 'blobs', item.getName()).profile
