--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -123,3 +123,13 @@ BODY {
     }
   }
 }
+
+.activity-model-wait, .loadind{
+  .loader{
+    display: block;
+
+    .loader{
+      display: none;
+    }
+  }
+}
