--- a/Chalkable.Web/assets/jade/activities/apps/AppCategories.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppCategories.jade
@@ -2,19 +2,17 @@
     .action-bar.not-transparent
         .container.panel-bg
             +ActionLink('appcategories', 'addCategory').chlk-add.opacity-button Add application category
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Name
-                .th Description
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getName()
-                        .td= item.getDescription()
-                        .td.action-links
-                            +ActionLink('appcategories', 'details', item.getId()).profile
-                            +ActionLink('appcategories', 'delete', item.getId()).remove
-        +Paginator('appcategories', 'list', self)
+    +Grid('appcategories', 'list', self).not-transparent
+        +GridHead()
+            .th Name
+            .th Description
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getName()
+                    .td= item.getDescription()
+                    .td.action-links
+                        +ActionLink('appcategories', 'details', item.getId()).profile
+                        +ActionLink('appcategories', 'delete', item.getId()).remove
 
