--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -1,25 +1,23 @@
 .bg-tasks
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Id
-                .th Created
-                .th Scheduled
-                .th Completed
-                .th Task State
-                .th Task Type
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getId()
-                        .td=item.getCreated().toString('d/m/y')
-                        .td=item.getScheduled().toString('d/m/y')
-                        .td=item.getCompleted().toString('d/m/y')
-                        .td= item.getTaskState().toString()
-                        .td= item.getTaskType()
-                        .td.action-links
-                            +ActionLink('backgroundtask', 'logs', item.getId()).profile
-                            +ActionLink('backgroundtask', 'delete', item.getId()).remove
-        +Paginator('backgroundtask', 'list', self)
+    +Grid('backgroundtask', 'list', self).not-transparent
+        +GridHead()
+            .th Id
+            .th Created
+            .th Scheduled
+            .th Completed
+            .th Task State
+            .th Task Type
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getId()
+                    .td=item.getCreated().toString('d/m/y')
+                    .td=item.getScheduled().toString('d/m/y')
+                    .td=item.getCompleted().toString('d/m/y')
+                    .td= item.getTaskState().toString()
+                    .td= item.getTaskType()
+                    .td.action-links
+                        +ActionLink('backgroundtask', 'logs', item.getId()).profile
+                        +ActionLink('backgroundtask', 'delete', item.getId()).remove
 
