--- a/Chalkable.Web/assets/jade/activities/district/Districts.jade
+++ b/Chalkable.Web/assets/jade/activities/district/Districts.jade
@@ -2,28 +2,26 @@
     .action-bar.not-transparent
         .container.panel-bg
             +ActionLink('district', 'addDistrict').chlk-add.opacity-button Add District
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Name
-                .th DB Name
-                .th SIS URL
-                .th SIS User name
-                .th SIS password
-                .th SIS system type
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getName()
-                        .td= item.getDbName()
-                        .td= item.getSisUrl()
-                        .td= item.getSisUserName()
-                        .td *
-                        .td= item.getSisSystemType()
-                        .td.action-links
-                            +ActionLink('schools', 'list', item.getId(), 0).profile
-                            +ActionLink('district', 'update', item.getId()).view
-                            +ActionLink('district', 'delete', item.getId()).remove
-        +Paginator('district', 'page', self)
+    +Grid('district', 'page', self).not-transparent
+        +GridHead()
+            .th Name
+            .th DB Name
+            .th SIS URL
+            .th SIS User name
+            .th SIS password
+            .th SIS system type
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getName()
+                    .td= item.getDbName()
+                    .td= item.getSisUrl()
+                    .td= item.getSisUserName()
+                    .td *
+                    .td= item.getSisSystemType()
+                    .td.action-links
+                        +ActionLink('schools', 'list', item.getId(), 0).profile
+                        +ActionLink('district', 'update', item.getId()).view
+                        +ActionLink('district', 'delete', item.getId()).remove
 
