--- a/Chalkable.Web/assets/jade/activities/storage/Blobs.jade
+++ b/Chalkable.Web/assets/jade/activities/storage/Blobs.jade
@@ -1,18 +1,16 @@
-.schools
-    .grid.not-transparent
-        .container
-            .head.panel-bg
-                .th Name
-                .th Uri
-                .th Size
-                .th
-            .body
-                each item in self.items
-                    .row
-                        .td= item.getName()
-                        .td= item.getUri()
-                        .td= item.getSize()
-                        .td.action-links
-                            +ActionLink('storage', 'delete', item.getName()).remove
-        +Paginator('storage', 'blobs', self)
+.blobs
+    +Grid('storage', 'blobs', self).not-transparent
+        +GridHead()
+            .th Name
+            .th Uri
+            .th Size
+            .th
+        +GridBody()
+            each item in self.items
+                +GridRow()
+                    .td= item.getName()
+                    .td= item.getUri()
+                    .td= item.getSize()
+                    .td.action-links
+                        +ActionLink('storage', 'delete', item.getName()).remove
 
