fixes to district

--- a/Chalkable.Web/assets/jade/activities/district/Districts.jade
+++ b/Chalkable.Web/assets/jade/activities/district/Districts.jade
@@ -21,7 +21,7 @@
                     .td *
                     .td= item.getSisSystemType()
                     .td.action-links
-                        +ActionLink('schools', 'list', item.getId(), 0).profile
+                        +ActionLink('schools', 'list', item.getId()).profile
                         +ActionLink('district', 'update', item.getId()).view
                         +ActionLink('district', 'delete', item.getId()).remove
 
