--- a/Chalkable.Web/assets/jade/controls/paginator.jade
+++ b/Chalkable.Web/assets/jade/controls/paginator.jade
@@ -1,22 +1,22 @@
 mixin Paginator(controller, action, data, params)
     params = params || [];
-    pd = self.preparePaginationData(data, params)
+    pagingData = self.preparePaginationData(data, params)
     .paginator-container
         .left-container
-            +ActionLink(controller, action, params, 0)(class =  'first-page' + (pd.hasPreviousPage ? '' : ' disabled'))
-            +ActionLink(controller, action, params, pd.prevPageStart)(class =  'prev-page' + (pd.hasPreviousPage ? '' : ' disabled'))
+            +ActionLink(controller, action, params, 0)(class = 'first-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
+            +ActionLink(controller, action, params, pagingData.prevPageStart)(class =  'prev-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
             .info-container
                 form
                     label(for='current_page') Page
-                    input(name='current_page', value=pd.pageIndex).page-value
+                    input(name='current_page', value=pagingData.pageIndex).page-value
                     span
-                        | of #{data.totalPages}
+                        | of #{pagingData.totalPages}
                     input(type="submit")
-                    input(type="hidden",name="controller",value=controller).controller-name
-                    input(type="hidden",name="action",value=action).action-name
-            +ActionLink(controller, action, params, pd.nextPageStart)(class =  'next-page' + (pd.hasNextPage ? '' : ' disabled'))
-            +ActionLink(controller, action, params, pd.lastPageStart)(class =  'last-page' + (pd.hasNextPage ? '' : ' disabled'))
+                    input(type="hidden", name="controller", value=controller).controller-name
+                    input(type="hidden", name="action", value=action).action-name
+            +ActionLink(controller, action, params, pagingData.nextPageStart)(class = 'next-page' + (pagingData.hasNextPage ? '' : ' disabled'))
+            +ActionLink(controller, action, params, pagingData.lastPageStart)(class = 'last-page' + (pagingData.hasNextPage ? '' : ' disabled'))
         .right-container
             SPAN
-                |Displaying #{pd.startText} - #{pd.end} of #{pd.totalCount}
+                |Displaying #{pagingData.startText} - #{pagingData.end} of #{pagingData.totalCount}
         .clear
