--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -1,2 +1,9 @@
-.announcement-form Вас вітає Announcement Form
+.announcement-form
+    -topData=self.getTopData();
+    -topItems=topData.getTopItems();
+    +LeftRightToolbar(topItems, chlk.templates.class.TopBar)(
+        selecteItemId=topData.getSelectedItemId(),
+        controller='announcement',
+        action='add'
+    ).classes-bar
 
