--- a/Chalkable.Web/assets/sass/partials/_controls.scss
+++ b/Chalkable.Web/assets/sass/partials/_controls.scss
@@ -3,3 +3,4 @@
 @import "partials/controls/_action-bar";
 @import "partials/controls/_glance-box";
 @import "partials/controls/_avatar";
+@import "partials/controls/_left-right-toolbar";
