--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -8,6 +8,7 @@
 @import "partials/main/_storage";
 @import "partials/main/people/_list";
 @import "partials/main/feed/_list";
+@import "partials/main/announcement/_form";
 
 BODY {
   DIV.page{
