--- a/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SysAdminSidebar.jade
@@ -10,5 +10,5 @@
         .buttons-row
 
             +ActionLink('funds', 'list').one-third-button.statistic(title="View Purchase Order") Purchase Order
-            +ActionLink('signup', 'list').one-third-button.settings(title="View Signups") Signups
+            +ActionLink('signup', 'list').one-third-button(title="View Signups") Signups
 #invite-button-container
