--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTasks.jade
@@ -1,5 +1,5 @@
 .bg-tasks
-    +Grid('backgroundtask', 'list', self).not-transparent
+    +Grid('backgroundtask', 'page', self).not-transparent
         +GridHead()
             .th Id
             .th Created
@@ -11,12 +11,12 @@
         +GridBody()
             each item in self.items
                 +GridRow()
-                    .td= item.getId()
-                    .td=item.getCreated().toString('d/m/y')
+                    .td= item.getId().valueOf()
+                    .td//=item.getCreated().toString('d/m/y')
                     .td=item.getScheduled().toString('d/m/y')
-                    .td=item.getCompleted().toString('d/m/y')
-                    .td= item.getTaskState().toString()
-                    .td= item.getTaskType()
+                    .td//=item.getCompleted().toString('d/m/y')
+                    .td= item.getTaskState().valueOf()
+                    .td= item.getTaskType().valueOf()
                     .td.action-links
                         +ActionLink('backgroundtask', 'logs', item.getId()).profile
                         +ActionLink('backgroundtask', 'delete', item.getId()).remove
