fixed bg task logs, moved odata assembly to 5.5 version

--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTaskLogs.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTaskLogs.jade
@@ -1,11 +1,11 @@
 .bg-tasks
-    +Grid('backgroundtask', 'logsPage', self).not-transparent
+    +Grid('backgroundtask', 'logsPage', self.items, [self.bgTaskId]).not-transparent
         +GridHead()
             .th Type
             .th Message
             .th Added
         +GridBody()
-            each item in self.items
+            each item in self.items.getItems()
                 +GridRow()
                     .td= item.getId().valueOf()
                     .td= item.getMessage()
