fixed bg task grid, paginator, added bg task type, bg task state

--- a/Chalkable.Web/assets/jade/activities/bgtasks/BgTaskLogs.jade
+++ b/Chalkable.Web/assets/jade/activities/bgtasks/BgTaskLogs.jade
@@ -1,5 +1,5 @@
 .bg-tasks
-    +Grid('backgroundtask', 'logsPage', self.items, [self.bgTaskId]).not-transparent
+    +Grid('backgroundtask', 'logsPage', self.items, [self.bgTaskId.valueOf()]).not-transparent
         +GridHead()
             .th Type
             .th Message
