added close action for template dialog, basic teacher settings page

--- a/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
@@ -14,4 +14,4 @@
                     label Keywords:
                     input(type="text",name="keywords", value=self.keywords)
                 +Button(type="submit").special-button.blue-button.submit-btn Submit
-                +Button.special-button.red-button Cancel
+                +Button.special-button.red-button.close Cancel
