--- a/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/district/district-dialog.jade
@@ -24,4 +24,4 @@
                     label SIS System Type:
                     input(type="text",name="sissystemtype", value=self.sisSystemType)
                 +Button(type="submit").special-button.blue-button.submit-btn Submit
-                +Button.special-button.red-button Cancel
+                +Button.special-button.red-button.close Cancel
