--- a/Chalkable.Web/assets/sass/partials/_demo.scss
+++ b/Chalkable.Web/assets/sass/partials/_demo.scss
@@ -1,6 +1,6 @@
 BODY {
   DIV.page{
-    #content {
+    >DIV#content {
       #main {
         >SPAN.demo{
           background: url(images/register/demo-bg.png) 0 0 no-repeat;
