--- a/Chalkable.Web/assets/sass/partials/main/_storage.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_storage.scss
@@ -1,6 +1,6 @@
 BODY {
   DIV.page{
-    #content {
+    >DIV#content {
       DIV#content-wrapper{
         .db-maintenance{
           .db-update-form{
