--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -1,23 +1,27 @@
 .announcement-form
-    -topData=self.getTopData();
-    -topItems=topData.getTopItems();
-    -classId=topData.getSelectedItemId()
-    -typeId=self.getSelectedTypeId()
-    +LeftRightToolbar(topItems, chlk.templates.class.TopBar)(
-        selectedItemId=topData.getSelectedItemId(),
-        controller='announcement',
-        action='add'
-    ).classes-bar
-    if classId
-        .action-bar.not-transparent.buttons
+    -topData = self.getTopData();
+    -announcement = self.getAnnouncement();
+    -topItems = topData.getTopItems();
+    -classId = announcement.getRecipientId();
+    -typeId = self.getSelectedTypeId();
+    +ActionForm('announcement', 'save')
+        +LeftRightToolbar(topItems, chlk.templates.class.TopBar)(
+            selectedItemId=topData.getSelectedItemId()
+        ).classes-bar
+        .action-bar.not-transparent.buttons(class=classId ? '' : 'x-hidden')
             .container.panel-bg
                 each item in self.getClassInfo().getTypesByClass()
-                    +ActionLink('announcement', 'add', classId, item.getId())(class = typeId==item.getId() ? 'pressed' : '')= item.getDescription()
-        if typeId
-            div Вас вітає Announcement Form
-        else
-            .choose-type
-    else
-        .choose-class
+                    BUTTON(
+                        class = typeId==item.getId() ? 'pressed' : '',
+                        typeId=item.getId(),
+                        typeName=item.getName(),
+                        type="submit",
+                        name="submitType",
+                        value="save"
+                    ).action-button= item.getDescription()
+        .ann-form-container(class=classId && typeId ? '' : 'x-hidden')
+            +RenderWith(announcement, chlk.templates.announcement.Announcement)
+        .choose-type(class=classId && !typeId ? '' : 'x-hidden')
+        .choose-class(class=classId ? 'x-hidden' : '')
 
 
