--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -12,7 +12,7 @@
 
 BODY {
   DIV.page{
-    #content {
+    >DIV#content {
       DIV#content-wrapper{
         &.profile{
           #main-top, #footer {
@@ -55,6 +55,19 @@ BODY {
         }
       }
     }
+  }
+}
+
+INPUT, TEXTAREA{
+  @include border-radius(5px);
+  background: #fff;
+  border-color: #9e9e9e transparent transparent transparent;
+  border-width: 1px 0 0 0;
+  padding: 5px;
+  resize: vertical;
+
+  &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder {
+     color: gray;
   }
 }
 
