--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -6,7 +6,7 @@ $border-color: #a1a1a1;
 
 BODY {
   DIV.page{
-    #content {
+    >DIV#content {
       DIV#content-wrapper{
         &.profile{
           .chlk-grid{
